--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ydx-edge-engineering-console",
+  "name": "frontend",
   "version": "0.1.0",
-  "homepage": "./",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -23,55 +22,5 @@
     "redux-thunk": "^2.4.1",
     "typescript": "^4.7.4",
     "uuid": "^9.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:ci": "cross-env CI=true GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "test:ci": "cross-env CI=true react-scripts test --reporters=default --coverage --testResultsProcessor ./node_modules/jest-sonar-reporter/index.js",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.43",
-    "@types/node-forge": "^1.0.4",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-redux": "^7.1.24",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.19.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest-sonar-reporter": "^2.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "jestSonar": {
-    "reportPath": "coverage",
-    "reportFile": "sonar-report.xml",
-    "indent": 4
   }
 }
